--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
@@ -24,5 +28,6 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
-  }
+  },
+  "devDependencies": {}
 }
